fixed two column responsive layout bug with GitHub link/image

--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,6 @@ p {
 
 #github {
     float: left;
-    width: 33%;
 }
 
 #gitpod {
